<b>Version 1.19</b>:<br>
- [BUGFIX] Bilder/Video-Links ab Tiefe 3 korrigiert.<br><br>
<b>Version 1.18</b>:<br>
- [BUGFIX] Next-Link bei Episode 1 jeder Staffel gefixt.<br><br>
<b>Version 1.17</b>:<br>
- [BUG] Bei Episode 1 jeder Staffel ist der Button für die nächste Folge falsch verlinkt. Episode 2 muss von Hand aus dem Menü ausgewählt werden.<br>
- [INTERFACE] Hilfe-Button hinzugefügt<br><br>
<b>Version 1.16</b>:<br>
- [INTERFACE] Abstand zu Mediennavigation verringert<br>
- [FEATURE] Zurück- und Vorwärts-Knopf können nun auch zwischen Unterordner/Staffeln wechseln<br><br>
<b>Version 1.15</b>:<br>
- [INTERFACE] Vor- und Zurückbutton angepasst, dass der Titel des nächsten Parts angezeigt wird.<br>
- [INTERFACE] Anzeige Anzahl Suchresultate<br>
- [OPTIMIERUNG] Optimierung der Suchfunktion<br><br>
<b>Version 1.14</b>:<br>
- [INTERFACE] Platzhalterhintergrund bewegt sich nun mit der Scrollposition<br><br>
<b>Version 1.13</b>:<br>
- [BUGFIX] Inhalte im selben Ordner wie das Suchresultat ergaben einen Fehler, wenn der Ordner zuvor noch nie geöffnet wurde<br><br>
<b>Version 1.12</b>:<br>
- [FEATURE] Suchfunktion (Bekannter Bug: Inhalte im selben Ordner wie das Suchresultat ergeben einen Fehler, wenn der Ordner zuvor noch nie geöffnet wurde.)<br><br>
<b>Version 1.11</b>:<br>
- [INTERFACE] Dunklere Farbpalette.<br>
- [INTERFACE] Aktuell geöffneter Inhalt wird farblich im Menü hervorgehoben.<br>
- [INTERFACE] Höherliegende Menüs können während dem Abspielen von Inhalten auf- und zugeklappt werden<br><br>
<b>Version 1.101</b>:<br>
- [HOTFIX] Fehler bei Buttondarstellung bei fortsetzbaren Medieninhalten<br><br>
<b>Version 1.10</b>:<br>
- [INTERFACE] Vorschaubild bei fortsetzbaren Medieninhalten<br><br>
<b>Version 1.09</b>:<br>
- [INTERFACE] Visuelle Anzeige, wenn ein Videozeitstempel zurückgesetzt wird (95%).<br>
- [INTERFACE] Bei Mediananzeige wird nun das Übergeordnete Menü angezeigt<br><br>
<b>Version 1.08</b>:<br>
- [BUGFIX] Fehlender Stern bei Favoriten<br><br>