@@ -36,7 +36,16 @@
             <h3>Neue Medieninhalte hinzufügen</h3>
             <p>Um neue Medieninhalte hinzuzufügen, müssen diese einfach in den entsprechenden STEFFLIX-Ordner kopiert werden und anschliessend das Programm "updateData.exe" ausgeführt werden.</p>
             <ol>
-                <li>Gewünschte Medien in passenden Unterordner von STEFFLIX kopieren</li>
+                <li>
+                    Gewünschte Medien in passenden Unterordner von STEFFLIX kopieren
+                    <h4 style="text-align: left;">Unterstützte Dateiformate:</h4>
+                    <ul style="text-align: left; margin-left: 30px; margin-bottom: 20px;">
+                        <li>Video: mp4</li>
+                        <li>Musik: mp3, ogg, m4a</li>
+                        <li>Bilder: jpg, png, gif</li>
+                        <p>Anleitung zur Konvertierung von Videos mit VLC</p>
+                    </ul>
+                </li>
                 <li>Preview-Bild in Preview-Ordner hinterlegen (optional)</li>
                 <li>updateData.exe ausführen</li>
             </ol>
